# TwinCAT-Structured-Text-C

./: .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
src/tcstc/: main.py  project.py
src/tcstc/formatters/: structured_text.py
src/tcstc/models/: pointer.py  twincat.py
src/tcstc/models/structured_text/: structured_text.py  tokens.py
src/tcstc/parsers/: helpers.py  structured_text.py
src/tcstc/parsers/structured_text/: structured_text.py  tokens.py
src/tcstc/twincat/: models.py
src/tcstc/util/: utils.py
stubs/parsy/: __init__.pyi
